tests/baselines/reference/parserSkippedTokens18.errors.txt
==== tests/cases/conformance/parser/ecmascript5/SkippedTokens/parserSkippedTokens18.ts (4 errors) ====
    foo(a \
          
!!! error TS1127: Invalid character.
           
!!! error TS1005: ')' expected.
    ~~~
!!! error TS2304: Cannot find name 'foo'.
        ~
!!! error TS2304: Cannot find name 'a'.